gcc/testsuite/gcc.dg/pr14963.c
/* { dg-require-effective-target gcc_frontend } */
X Y(Z); /* { dg-error "" "error before" } */
